--- a/index.html
+++ b/index.html
@@ -485,8 +485,8 @@ amzn.copilot.checkCoPilotSession();
                                 </div>
                                 <div class="xxs-6 xxs--start xxs-pd-l-05">
                                     <div class="col amped-personal-journey__modal__header__cta">
-                                        <span class="a-button a-button-base amped-sign-up-button amped-sign-up-button__redirect" id="a-autoid-1"><span class="a-button-inner"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="a-button-text a-text-center" role="button" id="a-autoid-1-announce">
-                                            Try Prime
+                                        <span class="a-button a-button-base amped-sign-up-button amped-sign-up-button__redirect" id="a-autoid-1"><span class="a-button-inner"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="a-button-text a-text-center" role="button" id="a-autoid-1-announce">
+                                            Get Gift OF Games Prime from the Epic Store!
                                         </a></span></span>
                                     </div>
                                 </div>
@@ -718,8 +718,8 @@ amzn.copilot.checkCoPilotSession();
                         <div class="xxs-12 sm-6 xxs--full">
                             <div class="col amped-personal-journey__modal__footer__cta">
                                 <p>Not a member? <br> Start a free trial.</p>
-                                <span class="a-button a-button-base amped-sign-up-button amped-sign-up-button__redirect" id="a-autoid-4"><span class="a-button-inner"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="a-button-text a-text-center" role="button" id="a-autoid-4-announce">
-                                    Try Prime
+                                <span class="a-button a-button-base amped-sign-up-button amped-sign-up-button__redirect" id="a-autoid-4"><span class="a-button-inner"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="a-button-text a-text-center" role="button" id="a-autoid-4-announce">
+                                    Try Prime!
                                 </a></span></span>
                             </div>
                         </div>
